refactored : refactored payment routes
